# AI-Agent-Builder

./: .dockerignore  .env.example  .gitignore  ASYNC_DESIGN_CHANGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIDENCE_DECISION.md  CONFIDENCE_STATUS.md  CONTRIBUTING.md  DISCLAIMER.md  DOCUMENTATION.md  Dockerfile  ENHANCED_CONFIDENCE_COMPLETE.md  FINAL_IMPLEMENTATION.md  GITHUB_SETUP.md  GUI_QUICK_START.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile  QUICK_FIX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REVIEW_PHASE1.md  RUFF_ANALYSIS.md  STRATEGY_EXAMPLES.md  SYSTEM_REVIEW.md  THESIS_APP.md  check_links.py  cleanup_code.sh  docker-compose.full.yml  docker-compose.test.yml  docker-compose.yml  docker_quickstart.sh  install.bat  install.sh  main.py  package-lock.json  pyproject.toml  pytest.ini  (+16 more)
agent_builder/: __init__.py  config.py  security.py  utils.py
agent_framework/: __init__.py  agent.py  api.py  compression.py  confidence.py  config.py  database.py  llm.py  models.py  rag.py  utils.py
database/: mock_data.sql  setup_mock_db.py
docs/: ADVANCED_FUNDAMENTAL_ANALYST.md  ADVANCED_MACRO_ANALYST.md  AGENT_FILE_GUIDELINES.md  API_REFERENCE.md  CHOOSING_AGENT_TYPE.md  COMPRESSION.md  CONFIGURATION.md  DATABASE_SETUP.md  DATA_FLOW.md  DOCKER_README.md  ENVIRONMENT_SETUP.md  FRAMEWORK_QUICKSTART.md  FUNDAMENTAL_QUICK_REFERENCE.md  GETTING_STARTED.md  HYBRID_AGENTS.md  INSTALL.md  LICENSE  LLM_CUSTOMIZATION.md  MACRO_QUICK_REFERENCE.md  MULTI_AGENT_SYSTEMS.md  OLLAMA_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START.md  RAG_USEAGE.md  README.md  README_FUNDAMENTAL_ANALYST.md  README_MACRO_ANALYST.md  README_TECHNICAL_ANALYST.md  SETUP_GUIDE.md  TECHNICAL_ANALYST_DOCUMENTATION.md  TECHNICAL_QUICK_REFERENCE.md  TESTING.md  TROUBLESHOOTING.md  UNIVERSITY_SETUP.md  api-reference.md  architecture.md  creating-agents.md  deployment.md  getting-started.md
examples/: 01_basic.py  02_llm_agent.py  03_hybrid.py  03_rag_agent.py  04_custom_llm_config.py  04_rag_agent.py  05_buffett_quality.py  06_lynch_garp.py  07_graham_value.py  08_compressed_value.py  09_compressed_rag.py  README.md  __init__.py  advanced_fundamental_analyst.py  advanced_macro_analyst.py  agents_with_mock_data.py  analyst_config.py  first_agent.py  fundamental_agents.py  llm_agent_example.py  llm_agents.py  llm_agents_with_personas.py  macro_agents.py  my_agents.py  myagent.py  myagent1.py  myagent1234.py  myagent14.py  myagent2.py  myagent3.py  myagent4.py  myagent5.py  production_agents.py  rag_agent_example.py  rag_agents.py  register_agents.py  risk_agents.py  sentiment_agents.py  (+3 more)
(+198 files in other folders)
