[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-framework"
version = "1.0.0"
description = "Production-ready AI agent framework for financial analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ThesisAI LLC"}
]
keywords = ["ai", "agent", "framework", "financial", "analysis", "llm", "rag", "postgresql", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Pytest",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "asyncpg>=0.29.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "ollama>=0.1.0",
]
rag = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
]
all = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.2.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/thesisai-hq/AI-Agent-Builder"
Documentation = "https://github.com/thesisai-hq/AI-Agent-Builder/tree/main/docs"
Repository = "https://github.com/thesisai-hq/AI-Agent-Builder"
"Bug Reports" = "https://github.com/thesisai-hq/AI-Agent-Builder/issues"

[tool.setuptools.packages.find]
include = ["agent_framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
